Updating a service worker during a navigation load sometimes makes the load fail https://bugs.webkit.org/show_bug.cgi?id=191986 <rdar://problem/46259790>

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/resources/trickle.py: Added.
(main):
* web-platform-tests/service-workers/service-worker/resources/update-fetch-worker.py: Added.
(main):
* web-platform-tests/service-workers/service-worker/update-on-navigation.https-expected.txt: Added.
* web-platform-tests/service-workers/service-worker/update-on-navigation.https.html: Added.

Source/WebCore:

Previously, we were registering a document as service worker client at creation of the document.
According the service worker spec, this should be done when handling the fetch event of the corresponding navigation load.
This ensures that the service worker will have a client and will not get updated in the middle of the navigation load.

At navigation load start, we do not have a document yet since it is created when receiving the first bytes.
Instead, we register a temporary document when starting the navigation load and unregister it when the real document is registered.

Test: imported/w3c/web-platform-tests/service-workers/service-worker/update-on-navigation.https.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::commitData):
(WebCore::DocumentLoader::registerTemporaryServiceWorkerClient):
(WebCore::DocumentLoader::unregisterTemporaryServiceWorkerClient):
(WebCore::DocumentLoader::loadMainResource):
(WebCore::DocumentLoader::clearMainResource):
* loader/DocumentLoader.h:


Canonical link: https://commits.webkit.org/206833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238683 268f45cc-cd09-0410-ab3c-d52691b4dbfc